--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-//    id 'kotlin-kapt'
-//    id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdk 32
@@ -57,23 +55,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx:20.0.6'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.2'
 
-    //Switch
     implementation 'com.github.GwonHyeok:StickySwitch:0.0.16'
 
-    //Swipe/Slide button
     implementation "com.ncorti:slidetoact:0.9.0"
 
-    // Material Design
     implementation 'com.google.android.material:material:1.6.1'
 
-    //QR Code generator
     implementation 'com.google.zxing:core:3.4.1'
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0@aar'
 
-    //Chart / Graph
     implementation 'com.github.majorkik:SparkLineLayout:1.0.1'
 
-    // Lottie
     implementation 'com.airbnb.android:lottie:5.2.0'
 
     implementation 'com.karumi:dexter:6.2.3'
